--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,12 @@
     line-height: 1.7;
   }
 
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     font-family: var(--font-serif);
     line-height: 1.05;
   }
@@ -82,8 +87,9 @@
   .text-serif {
     font-family: var(--font-serif);
   }
+
   .text-sans {
-    font-family: var(--font-sans);
+    @apply font-sans;
   }
 }
 
@@ -91,9 +97,11 @@
 ::-webkit-scrollbar {
   width: 6px;
 }
+
 ::-webkit-scrollbar-track {
   background: hsl(var(--background));
 }
+
 ::-webkit-scrollbar-thumb {
   background: hsl(var(--muted));
 }
